[ServiceWorker] Fix ExtendableMessageEvent idl binding

Spec:
https://w3c.github.io/ServiceWorker/#extendablemessageevent-interface

ExtendableMessageEventInit.ports should NOT allow null,
ExtendableMessageEvent.ports should be empty array by default.

BUG=702352, 702361
TEST=blink_tests
external/wpt/service-workers/service-worker/ServiceWorkerGlobalScope/extendable-message-event-constructor.https.html

Review-Url: https://codereview.chromium.org/2904563004
Cr-Commit-Position: refs/heads/master@{#474528}

Former-commit-id: 2b468e6409c8077f9588eaadd33fa3c493bcaebf